--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "node": "^16.13.2",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
@@ -12,8 +13,7 @@
     "mongoose": "^6.6.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
-    "multer-gridfs-storage": "^5.0.2",
-    "node": "^16.13.2"
+    "multer-gridfs-storage": "^5.0.2"
   },
   "name": "server",
   "version": "1.0.0",
